Add with to hello world step

--- a/.github/workflows/hello-docker.yaml
+++ b/.github/workflows/hello-docker.yaml
@@ -9,4 +9,5 @@ jobs:
     steps:
       - name: Hello world
         uses: dubs11kt/sample-action@v1
-        with: 'dubs11kt'
+        with:
+          who-to-greet: 'dubs11kt'
