--- a/.github/workflows/hello-docker.yaml
+++ b/.github/workflows/hello-docker.yaml
@@ -1,13 +1,15 @@
 name: Hello world
-on:
-  push:
-    branches:
-      - main
+on: [push]
 jobs:
-  release:
+  hello_world_job:
     runs-on: ubuntu-latest
+    name: A job to say hello
     steps:
-      - name: Hello world
-        uses: dubs11kt/sample-action@v1
+      - name: Hello world action step
+        id: hello
+        uses: dubs11kt/sample-actionv1
         with:
-          who-to-greet: 'dubs11kt'
+          who-to-greet: 'Mona the Octocat'
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
