--- a/.github/workflows/hello-docker.yaml
+++ b/.github/workflows/hello-docker.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: dubs11kt/sample-action@v1
+        uses: dubs11kt/sample-action@main
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
