--- a/.github/workflows/hello-docker.yaml
+++ b/.github/workflows/hello-docker.yaml
@@ -1,15 +1,9 @@
 name: Hello world
-on: [push]
+on: [pull_request]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: test
     steps:
-      - name: Hello world action step
-        id: hello
-        uses: dubs11kt/sample-action@main
-        with:
-          who-to-greet: 'dubs11kt'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: test
+        run: echo ${{ github.head_ref }}
