--- a/.github/workflows/hello-docker.yaml
+++ b/.github/workflows/hello-docker.yaml
@@ -2,6 +2,7 @@ name: Hello world
 on: [pull_request]
 jobs:
   hello_world_job:
+    if: ${{ startsWith(github.head_ref, 'test-') }}
     runs-on: ubuntu-latest
     name: test
     steps:
