--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     name: test
     steps:
+      - uses: actions/checkout@v3
       - name: test
         run: echo ${{ github.head_ref }}
