--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     name: test
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: test
-        run: echo ${{ github.head_ref }}
+        run: echo ${{ github.ref_name }}
