--- a/renovate.json5
+++ b/renovate.json5
@@ -14,19 +14,19 @@
       "updateTypes": ["manager"],
       "BaseBranches": ["service-a"],
       "labels": ["GHA"],
-      "matchFiles": [".github/workflows/main.yaml"]
+      "matchFiles": [".github/workflows/service-a.yaml"]
     },
     {
       "updateTypes": ["manager"],
       "BaseBranches": ["service-b"],
       "labels": ["GHA"],
-      "matchFiles": [".github/workflows/main.yaml"]
+      "matchFiles": [".github/workflows/service-b.yaml"]
     },
     {
       "updateTypes": ["manager"],
       "BaseBranches": ["service-c"],
       "labels": ["GHA"],
-      "matchFiles": [".github/workflows/main.yaml"]
+      "matchFiles": [".github/workflows/service-c.yaml"]
     }
   ]
 }
