matchFiles to matchPaths

--- a/renovate.json5
+++ b/renovate.json5
@@ -12,7 +12,7 @@
     {
       "groupName": "main",
       "matchBaseBranches": ["main"],
-      "matchFiles": ["main.yaml"]
+      "matchPaths": ["**/main.yaml"]
     },
     {
       "groupName": "service-a",
