--- a/renovate.json5
+++ b/renovate.json5
@@ -6,26 +6,22 @@
    ],
   "enabledManagers": ["github-actions"],
   "labels": ["dependencies"],
-  "baseBranches": ["main", "service-a", "service-b", "service-c"],
+  // "baseBranches": ["main", "service-a", "service-b", "service-c"],
   // "ignorePaths": [".github/workflows/*"],
   "packageRules": [
     {
-      "groupName": "main",
       "matchBaseBranches": ["main"],
       "matchPaths": ["**/main.yaml"]
     },
     {
-      "groupName": "service-a",
       "matchBaseBranches": ["service-a"],
       "matchPaths": ["**/service-a.yaml"]
     },
     {
-      "groupName": "service-b",
       "matchBaseBranches": ["service-b"],
       "matchPaths": ["**/service-b.yaml"]
     },
     {
-      "groupName": "service-c",
       "matchBaseBranches": ["service-c"],
       "matchPaths": ["**/service-c.yaml"]
     }
