--- a/renovate.json5
+++ b/renovate.json5
@@ -6,7 +6,7 @@
    ],
   "enabledManagers": ["github-actions"],
   "labels": ["dependencies"],
-  "baseBranches": ["main", "service-a", "service-b", "service-c"],
+  // "baseBranches": ["main", "service-a", "service-b", "service-c"],
   // "ignorePaths": [".github/workflows/*"],
   "packageRules": [
     {
