--- a/renovate.json5
+++ b/renovate.json5
@@ -4,7 +4,7 @@
     "config:base",
      ":prHourlyLimitNone"
    ],
-  // "enabledManagers": ["github-actions"],
+  "enabledManagers": ["ansible"],
   "labels": ["dependencies"],
   "baseBranches": ["main", "service-a", "service-b", "service-c"],
   // "ignorePaths": [".github/workflows/*"],
