--- a/renovate.json5
+++ b/renovate.json5
@@ -4,32 +4,28 @@
     "config:base",
      ":prHourlyLimitNone"
    ],
-  "enabledManagers": ["ansible"],
+  "enabledManagers": ["github-actions"],
   "labels": ["dependencies"],
   "baseBranches": ["main", "service-a", "service-b", "service-c"],
   // "ignorePaths": [".github/workflows/*"],
   "packageRules": [
     {
       "groupName": "main",
-      "matchManagers": ["github-actions"],
       "matchBaseBranches": ["main"],
       "matchPaths": ["**/main.yaml"]
     },
     {
       "groupName": "service-a",
-      "matchManagers": ["github-actions"],
       "matchBaseBranches": ["service-a"],
       "matchPaths": ["**/service-a.yaml"]
     },
     {
       "groupName": "service-b",
-      "matchManagers": ["github-actions"],
       "matchBaseBranches": ["service-b"],
       "matchPaths": ["**/service-b.yaml"]
     },
     {
       "groupName": "service-c",
-      "matchManagers": ["github-actions"],
       "matchBaseBranches": ["service-c"],
       "matchPaths": ["**/service-c.yaml"]
     }
