--- a/renovate.json5
+++ b/renovate.json5
@@ -13,29 +13,29 @@
       "matchPackageNames": ["*"],
       "enabled": false
     }
-    // {
-    //   "enabled": true,
-    //   "groupName": "main",
-    //   "matchBaseBranches": ["main"],
-    //   "matchPaths": ["**/main.yaml"]
-    // },
-    // {
-    //   "enabled": true,
-    //   "groupName": "service-a",
-    //   "matchBaseBranches": ["service-a"],
-    //   "matchPaths": ["**/service-a.yaml"]
-    // },
-    // {
-    //   "enabled": true,
-    //   "groupName": "service-b",
-    //   "matchBaseBranches": ["service-b"],
-    //   "matchPaths": ["**/service-b.yaml"]
-    // },
-    // {
-    //   "enabled": true,
-    //   "groupName": "service-c",
-    //   "matchBaseBranches": ["service-c"],
-    //   "matchPaths": ["**/service-c.yaml"]
-    // }
+    {
+      "enabled": true,
+      "groupName": "main",
+      "matchBaseBranches": ["main"],
+      "matchPaths": ["**/main.yaml"]
+    },
+    {
+      "enabled": true,
+      "groupName": "service-a",
+      "matchBaseBranches": ["service-a"],
+      "matchPaths": ["**/service-a.yaml"]
+    },
+    {
+      "enabled": true,
+      "groupName": "service-b",
+      "matchBaseBranches": ["service-b"],
+      "matchPaths": ["**/service-b.yaml"]
+    },
+    {
+      "enabled": true,
+      "groupName": "service-c",
+      "matchBaseBranches": ["service-c"],
+      "matchPaths": ["**/service-c.yaml"]
+    }
   ]
 }
