--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,4 +7,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: test
-        run: echo ${{ github.ref_name }}
+        run: |
+          echo ${{ github.head_ref }}
